--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,20 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Server files
+
+# dependencies
+/server/node_modules
+
+# misc
+/server/.git
+/server/.DS_Store
+/server/.env.local
+/server/.env.development.local
+/server/.env.test.local
+/server/.env.production.local
+
+/server/npm-debug.log*
+/server/yarn-debug.log*
+/server/yarn-error.log*
